# moona

./: .gitignore  CMakeLists.txt  README.md  flatpak-manifest.yml
cmake/: FindKSystemStats.cmake
src/: CMakeLists.txt  GpuDataProvider.cpp  GpuDataProvider.h  SolidDataProvider.cpp  SolidDataProvider.h  SolidProvider.cpp  SolidProvider.h  main.cpp
src/data/: SolidAdapter.cpp  SolidAdapter.h
src/qml/: DataProvider.qml  Main.qml  SensorData.qml  SomePage.qml  SystemPage.qml  WorkInProgress.qml
src/qml/components/: ClippedRectangle.qml  IconDelegate.qml  SensorDelegate.qml  SensorLineChart.qml
src/qml/views/: CPUView.qml  MemoryView.qml
